--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -1,260 +1,231 @@
 /* STYLES FOR ABOVE THE FOLD */
-
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
-
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #hero-997 {
-      /* 200px - 300px - leaving extra space for the navigation */
-      padding: clamp(12.5rem, 25.95vw, 18.75rem) calc(16 / 16 * 1rem) 0;
-      /* 100px - 250px */
-      padding-bottom: clamp(6.25rem, 25.95vw, 15.625rem);
-      position: relative;
-      z-index: 1;
-      /* prevents overflow from the lines extending past the screen width */
-      overflow: hidden;
-
-      .cs-container {
-          max-width: calc(1280 / 16 * 1rem);
-          width: 100%;
-          margin: auto;
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          position: relative;
-          /* 100px - 200px */
-          gap: clamp(6.25rem, 25vw, 12.5rem);
-      }
-
-      .cs-content {
-          max-width: calc(955 / 16 * 1rem);
-          width: 100%;
-          box-sizing: border-box;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          align-items: flex-start;
-          align-items: flex-start;
-      }
-
-      .cs-topper {
-          /* 13px - 16px */
-          font-size: clamp(0.8125rem, 1.6vw, 1rem);
-          line-height: 1.2em;
-          font-weight: 700;
-          text-align: left;
-          width: 100%;
-          margin-bottom: calc(28 / 16 * 1rem);
-          color: var(--bodyTextColorWhite);
-          white-space: nowrap;
-          text-transform: uppercase;
-          letter-spacing: 0.1rem;
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          position: relative;
-          gap: calc(20 / 16 * 1rem);
-
-          &:after {
-              /* white line */
-              content: "";
-              max-width: calc(120 / 16 * 1rem);
-              width: 50%;
-              height: 1px;
-              background: currentColor;
-              opacity: 1;
-              display: block;
-              position: relative;
-          }
-      }
-
-      .cs-title {
-          /* 39px - 80px */
-          font-size: clamp(2.4375rem, 6.4vw, 5rem);
-          line-height: 1.2em;
-          font-weight: 900;
-          text-align: left;
-          max-width: 20ch;
-          width: 100%;
-          margin: 0 0 calc(32 / 16 * 1rem) 0;
-          color: var(--bodyTextColorWhite);
-          position: relative;
-      }
-
-      .cs-color {
-          color: var(--primary);
-      }
-
-      .cs-text {
-          /* 16px - 20px */
-          font-size: clamp(1rem, 1.95vw, 1.25rem);
-          line-height: 1.5em;
-          text-align: left;
-          max-width: calc(630 / 16 * 1rem);
-          width: 100%;
-          margin: 0 0 calc(32 / 16 * 1rem) 0;
-          color: var(--bodyTextColorWhite);
-      }
-
-      .cs-button-box {
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          flex-wrap: wrap;
-          gap: calc(20 / 16 * 1rem);
-      }
-
-      .cs-button-solid {
-          font-size: calc(16 / 16 * 1rem);
-          /* 46px - 56px */
-          line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-          font-weight: 700;
-          text-align: center;
-          width: calc(180 / 16 * 1rem);
-          margin: 0;
-          padding: 0;
-          color: #fff;
-          background-color: var(--primary);
-          text-decoration: none;
-          display: inline-block;
-          position: relative;
-          z-index: 1;
-          transition: color 0.3s;
-
-          &:before {
-              content: "";
-              width: 0%;
-              height: 100%;
-              background: #fff;
-              opacity: 1;
-              display: block;
-              position: absolute;
-              top: 0;
-              left: 0;
-              z-index: -1;
-              transition: width 0.3s;
-          }
-
-          &:hover {
-              color: #1a1a1a;
-              &:before {
-                  width: 100%;
-              }
-          }
-      }
-
-      .cs-button-transparent {
-          font-size: calc(16 / 16 * 1rem);
-          /* 46px - 56px */
-          line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-          font-weight: 700;
-          width: calc(180 / 16 * 1rem);
-          /* 46px - 56px */
-          height: clamp(2.875rem, 5.5vw, 3.5rem);
-          margin: 0;
-          box-sizing: border-box;
-          padding: 0;
-          color: #fff;
-          background-color: transparent;
-          border: 1px solid var(--bodyTextColorWhite);
-          text-decoration: none;
-          display: inline-flex;
-          justify-content: center;
-          align-items: center;
-          position: relative;
-          z-index: 1;
-          transition: color / 3s;
-
-          &:before {
-              content: "";
-              background: #fff;
-              opacity: 1;
-              display: block;
-              position: absolute;
-              /* so it sits on top of the border */
-              top: -1px;
-              right: -1px;
-              bottom: -1px;
-              left: -1px;
-              z-index: -1;
-              /* this is what creates the grow affect on hover */
-              transform: scaleX(0);
-              transition: transform 0.3s;
-              transform-origin: left;
-          }
-
-          &:hover {
-              color: #1a1a1a;
-              &:before {
-                  transform: scaleX(1);
-              }
-          }
-      }
-
-      .cs-background {
-          /* Background Image */
-          width: 100%;
-          height: 100%;
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          z-index: -2;
-
-          &:before {
-              /* Black Color Overlay */
-              content: "";
-              width: 100%;
-              height: 100%;
-              background: linear-gradient(
-                  41deg,
-                  rgba(26, 26, 26, 0.9) 30%,
-                  rgba(26, 26, 26, 0.3) 100%
-              );
-              opacity: 1;
-              display: block;
-              position: absolute;
-              top: 0;
-              left: 0;
-              z-index: 1;
-              /* prevents the cursor from interacting with it */
-              pointer-events: none;
-          }
-
-          img {
-              width: 100%;
-              height: 100%;
-              /* Makes image act like a background-image */
-              object-fit: cover;
-              position: absolute;
-              top: 0;
-              left: 0;
-          }
-      }
+    /* 200px - 300px - leaving extra space for the navigation */
+    padding: clamp(12.5rem, 25.95vw, 18.75rem) 1rem 0;
+    /* 100px - 250px */
+    padding-bottom: clamp(6.25rem, 25.95vw, 15.625rem);
+    position: relative;
+    z-index: 1;
+    /* prevents overflow from the lines extending past the screen width */
+    overflow: hidden;
+  }
+  #hero-997 .cs-container {
+    max-width: 80rem;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    /* 100px - 200px */
+    gap: clamp(6.25rem, 25vw, 12.5rem);
+  }
+  #hero-997 .cs-content {
+    max-width: 59.6875rem;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-items: flex-start;
+  }
+  #hero-997 .cs-topper {
+    /* 13px - 16px */
+    font-size: clamp(0.8125rem, 1.6vw, 1rem);
+    line-height: 1.2em;
+    font-weight: 700;
+    text-align: left;
+    width: 100%;
+    margin-bottom: 1.75rem;
+    color: var(--bodyTextColorWhite);
+    white-space: nowrap;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    gap: 1.25rem;
+  }
+  #hero-997 .cs-topper:after {
+    /* white line */
+    content: "";
+    max-width: 7.5rem;
+    width: 50%;
+    height: 1px;
+    background: currentColor;
+    opacity: 1;
+    display: block;
+    position: relative;
+  }
+  #hero-997 .cs-title {
+    /* 39px - 80px */
+    font-size: clamp(2.4375rem, 6.4vw, 5rem);
+    line-height: 1.2em;
+    font-weight: 900;
+    text-align: left;
+    max-width: 20ch;
+    width: 100%;
+    margin: 0 0 2rem 0;
+    color: var(--bodyTextColorWhite);
+    position: relative;
+  }
+  #hero-997 .cs-color {
+    color: var(--primary);
+  }
+  #hero-997 .cs-text {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 1.95vw, 1.25rem);
+    line-height: 1.5em;
+    text-align: left;
+    max-width: 39.375rem;
+    width: 100%;
+    margin: 0 0 2rem 0;
+    color: var(--bodyTextColorWhite);
+  }
+  #hero-997 .cs-button-box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.25rem;
+  }
+  #hero-997 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    font-weight: 700;
+    text-align: center;
+    width: 11.25rem;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    background-color: var(--primary);
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    transition: color 0.3s;
+  }
+  #hero-997 .cs-button-solid:before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    background: #fff;
+    opacity: 1;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #hero-997 .cs-button-solid:hover {
+    color: #1a1a1a;
+  }
+  #hero-997 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #hero-997 .cs-button-transparent {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    font-weight: 700;
+    width: 11.25rem;
+    /* 46px - 56px */
+    height: clamp(2.875rem, 5.5vw, 3.5rem);
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid var(--bodyTextColorWhite);
+    text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    transition: color/3s;
+  }
+  #hero-997 .cs-button-transparent:before {
+    content: "";
+    background: #fff;
+    opacity: 1;
+    display: block;
+    position: absolute;
+    /* so it sits on top of the border */
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    z-index: -1;
+    /* this is what creates the grow affect on hover */
+    transform: scaleX(0);
+    transition: transform 0.3s;
+    transform-origin: left;
+  }
+  #hero-997 .cs-button-transparent:hover {
+    color: #1a1a1a;
+  }
+  #hero-997 .cs-button-transparent:hover:before {
+    transform: scaleX(1);
+  }
+  #hero-997 .cs-background {
+    /* Background Image */
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+  }
+  #hero-997 .cs-background:before {
+    /* Black Color Overlay */
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(41deg, rgba(26, 26, 26, 0.9) 30%, rgba(26, 26, 26, 0.3) 100%);
+    opacity: 1;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    /* prevents the cursor from interacting with it */
+    pointer-events: none;
+  }
+  #hero-997 .cs-background img {
+    width: 100%;
+    height: 100%;
+    /* Makes image act like a background-image */
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
-
 /* Large Desktop Parallax Effect - 1300px */
 @media only screen and (min-width: 81.25rem) {
   #hero-997 {
-      background: url("assets/images/Hero2.jpeg");
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-      /* creates parallax effect on background image */
-      background-attachment: fixed;
-      /* remove img tag so we can make parallax work */
-
-      .cs-background {
-          img {
-              display: none;
-          }
-      }
+    background: url("assets/images/Hero2.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* creates parallax effect on background image */
+    background-attachment: fixed;
+    /* remove img tag so we can make parallax work */
+  }
+  #hero-997 .cs-background img {
+    display: none;
   }
 }
-
-                              
 
 /*# sourceMappingURL=critical.css.map */
